gap between apps to footer fixed

--- a/src/components/AboutSection/AboutSection.scss
+++ b/src/components/AboutSection/AboutSection.scss
@@ -112,6 +112,7 @@
           justify-content: flex-end;
           align-items: flex-start;
           order: 2;
+          padding-bottom: 0;
         }
 
         .apple-store-icon-container,
